src/test/ui/reachable/expr_unary.stderr
error: unreachable expression
  --> $DIR/expr_unary.rs:18:28
   |
18 |     let x: ! = ! { return; 22 };
   |                            ^^
   |
note: lint level defined here
  --> $DIR/expr_unary.rs:14:9
   |
14 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: cannot coerce `{integer}` to !
  --> $DIR/expr_unary.rs:18:28
   |
18 |     let x: ! = ! { return; 22 };
   |                            ^^
   |
   = note: #[deny(coerce_never)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42869 <https://github.com/rust-lang/rust/issues/42869>

error[E0600]: cannot apply unary operator `!` to type `!`
  --> $DIR/expr_unary.rs:18:16
   |
18 |     let x: ! = ! { return; 22 };
   |                ^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

